# data-science-ml-template

./: .gitignore  AGENTS.md  README.md  council_critique.md.resolved  demo_feature_pipeline.py  eda.ipynb  pyproject.toml
configs/: online_shopping_example.toml
examples/: infer_columns.py
quorum/MCQ-Votes/: mcq_run_1782311147057_9ec392fe.md  mcq_run_1782311465649_e8621704.md
src/: __init__.py  artifacts.py  cli.py  config.py  data.py  evaluation.py  features.py  modeling.py  pipeline.py  preprocessing.py  project_config.py  tabular_transformer.py  validation.py
src/configs/: online_shopping_example.toml
tests/: test_column_inference.py  test_project_config.py
