[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-science-ml-template"
version = "0.1.0"
description = "A lightweight skeleton for tabular data science and machine learning projects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.3",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
]

[project.scripts]
tabular-ml-run = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
